# weather-forecast

./: .env  .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/api_docs/: forecast.rs
src/config/: settings.rs
src/handlers/: forecast.rs  mod.rs  users.rs
src/models/: city_query.rs  mod.rs  user.rs
src/routes/: details.rs  routes.rs  users.rs
src/services/: http_client.rs
tests/: config_test.rs  users_test.rs  weather_test.rs
