[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
paperclip = { version = "0.8", features = ["actix4", "swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
async-trait = "0.1.88"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
mockall = "0.13.1"
rstest = "0.25.0"
log = "0.4.27"
