[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
paperclip = { version = "0.9.5", features = ["actix4", "swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
once_cell = "1.21.3"
async-trait = "0.1.88"
env_logger = "0.11.8"
mockall = "0.13.1"
log = "0.4.27"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
temp-env = "0.3.6"
cargo-machete = "0.8.0"