[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
paperclip = { version = "0.9.5", features = ["actix4", "swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
once_cell = "1.21.3"
async-trait = "0.1.88"
env_logger = "0.11.8"
mockall = "0.13.1"
log = "0.4.27"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
#cargo-machete = "0.8.0"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["macros", "actix_extras"] }
futures-util = "0.3.31"


[dev-dependencies]
test-log = "0.2"
log = "0.4"
tempfile = "3"
serial_test = "3.2.0"

[profile.dev]
opt-level = 1
debug = true
# incremental = true
codegen-units = 4
panic = "unwind"
lto = false

[profile.test]
opt-level = 1      
debug = true       
# incremental = true 
codegen-units = 1  
lto = false 
